--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,27 +12,44 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
   <body>
-    <div class="jumbotron">
+
+ <!-- Home. General information, navigation and picture -->
+    <div class="cover">
+  <div class="navbar">
     <ol class="breadcrumb">
   <li><a href="#">Home</a></li>
-  <li><a href="#">Library</a></li>
-  <li class="active">Data</li>
+  <li><a href="#">Bio</a></li>
+  <li><a href="#">Recent Projects</a></li>
+  <li><a href="#">Professional Experience</a></li>
+  <li><a href="#">Human Experience</a></li>
+  <li id="navemail"><a href="#">walterayalae43@gmail.com</a></li>
     </ol>
+  </div>
   
   <div class="row">
   <div id="title">
-  <h2>Walter Ayala</h2>
-  <p>-Full Stack Developer-</p>
+  <h1>Walter Ayala</h1>
+  <h4>-Full Stack Developer-</h4>
   </div>
   <div class="col-xs-6 col-md-3">
 
       <img id="imgWalt" src="https://c2.staticflickr.com/6/5714/30704177546_6ff19a5374_q.jpg" alt="My Pic">
     </a>
+
+  <div class= contact1>
+   <ul class="contact2">
+    <li><a href="walterayalae43@gmail.com" >walterayalae43@gmail.com</a></li>
+    <li><a href="https://www.linkedin.com/in/walterayalae"   >Linkedin</a></li>
+    <li><a href="https://github.com/walterayalae" >Github</a></li>
+   </ul>
+   </div>
     
 </div>
   </div>
 </div>
+<div>
 
+<!-- Most recent projects. Display top 3 with access to code repository -->
 <div class="row1">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
@@ -82,12 +99,12 @@
     </div>
   </div>
 </div>
-
+</div>
 <h2>Professional Experience</h2>
 <div class="media">
   <div class="media-left">
     <a href="#">
-      <img class="media-object" src="https://pbs.twimg.com/profile_images/505827494763966464/pRL1gxTJ_400x400.jpeg" alt="...">
+      <img class="media-object" src="http://churrocoaustin.com/wp-content/uploads/2014/12/ChurrCoLogoSalmon144x144.png" alt="...">
     </a>
   </div>
   <div class="media-body">
