--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,12 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   </head>
   <body>
 
- <!-- Home. General information, navigation and picture -->
-    <div class="cover">
+ <!-- Home. General information, navigation and photo -->
+  <div class="cover">
   <div class="navbar">
     <ol class="breadcrumb">
   <li><a href="#">Home</a></li>
@@ -22,7 +23,7 @@
   <li><a href="#">Recent Projects</a></li>
   <li><a href="#">Professional Experience</a></li>
   <li><a href="#">Human Experience</a></li>
-  <li id="navemail"><a href="#">walterayalae43@gmail.com</a></li>
+  <span id="email"><a href="mailto:walterayalae43@gmail.com">walterayalae43@gmail.com</a></span>
     </ol>
   </div>
   
@@ -32,25 +33,28 @@
   <h4>-Full Stack Developer-</h4>
   </div>
   <div class="col-xs-6 col-md-3">
-
-      <img id="imgWalt" src="https://c2.staticflickr.com/6/5714/30704177546_6ff19a5374_q.jpg" alt="My Pic">
-    </a>
-
+  <img id="imgWalt" src="https://c2.staticflickr.com/6/5714/30704177546_6ff19a5374_q.jpg" alt="myPhoto">
   <div class= contact1>
    <ul class="contact2">
-    <li><a href="walterayalae43@gmail.com" >walterayalae43@gmail.com</a></li>
-    <li><a href="https://www.linkedin.com/in/walterayalae"   >Linkedin</a></li>
+    <li><a href="mailto:walterayalae43@gmail.com" >Email me</a></li>
+    <li><a href="https://www.linkedin.com/in/walterayalae" >Linkedin</a></li>
     <li><a href="https://github.com/walterayalae" >Github</a></li>
    </ul>
-   </div>
-    
+   </div>    
 </div>
   </div>
 </div>
+
+<!-- Section to add website's general summary -->
 <div>
+<h2>Summary</h2>
+
+
+</div>
 
 <!-- Most recent projects. Display top 3 with access to code repository -->
 <div class="row1">
+<h2>Recent Projects</h2>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
       <img id="qc" src="https://pbs.twimg.com/profile_images/510387922730639360/UANn5q8i.jpeg" alt="...">
@@ -65,7 +69,6 @@
       </div>
     </div>
   </div>
-
 
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
@@ -83,7 +86,6 @@
     </div>
   </div>
 
-
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
       <img src="http://hiphoplives.net/wp-content/uploads/2015/09/hangman.gif" alt="...">
@@ -100,8 +102,12 @@
   </div>
 </div>
 </div>
-<h2>Professional Experience</h2>
+<hr>
+
+<!-- Experience and professional achievements -->
+<div class="experience">
 <div class="media">
+<h2>Professional Experience</h2>
   <div class="media-left">
     <a href="#">
       <img class="media-object" src="http://churrocoaustin.com/wp-content/uploads/2014/12/ChurrCoLogoSalmon144x144.png" alt="...">
@@ -116,6 +122,7 @@
     </ul>
   </div>
 </div>
+<br>
 
 <div class="media">
   <div class="media-left">
@@ -132,7 +139,7 @@
     </ul>
   </div>
 </div>
-
+<br>
 
 <div class="media">
   <div class="media-left">
@@ -149,7 +156,7 @@
     </ul>
   </div>
 </div>
-
+<br>
 
 <div class="media">
   <div class="media-left">
@@ -164,7 +171,7 @@
     </ul>
   </div>
 </div>
-
+<br>
 
 <div class="media">
   <div class="media-left">
@@ -178,7 +185,13 @@
     <li>Provided bilingual customer service at the happiest place on Earth.</li>
     </ul>
   </div>
+  <br>
+  
 </div>
+</div>
+<div>
+  <h2>Human Experience</h2>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
