added footer pic & introduction pics

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,15 +46,35 @@
 </div>
 
 <!-- Section to add website's general summary -->
-<div>
-<h2>Summary</h2>
-
-
+<div class="summary">
+<h2>Introduction</h2>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="https://scontent.felp1-1.fna.fbcdn.net/t31.0-8/14633189_1853371334882556_4211683782330225012_o.jpg" alt="...">
+      <div class="caption">
+        <h3>Hack Reactor</h3>
+        <p>Austin, TX</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+     <img src="https://scontent.felp1-1.fna.fbcdn.net/t31.0-8/14711428_1854606188092404_8668884261203829020_o.jpg" alt="hackathon pic">
+      <div class="caption">
+        <h3>ATX Diversity Hackathon 2016</h3>
+        <p>Award Winner</p>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 
 <!-- Most recent projects. Display top 3 with access to code repository -->
 <div class="row1">
-<h2>Recent Projects</h2>
+<h2 id="projects">Recent Projects</h2><br>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
       <img id="qc" src="https://pbs.twimg.com/profile_images/510387922730639360/UANn5q8i.jpeg" alt="...">
@@ -101,7 +121,7 @@
     </div>
   </div>
 </div>
-</div>
+</div><br>
 <hr>
 
 <!-- Experience and professional achievements -->
@@ -192,6 +212,7 @@
 <div>
   <h2>Human Experience</h2>
   </div>
+  <div class="footer">This footer will always be positioned at the bottom of the page, but <strong>not fixed</strong>.</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
