--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,10 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+h2 {
+	text-align: center;
+}
+
 /*
 *Navigation bar
  */
@@ -58,6 +62,14 @@ h1 {
 
 }
 
+.summary {
+	padding-left: 180px;
+	display:inline-block;
+}
+
+#projects{
+	color:white;
+}
 .experience {
 	border-style: solid;
 	height:100%;
@@ -97,3 +109,9 @@ h1 {
 	background-image: url("https://wallpaperscraft.com/image/imac_apple_computer_table_cup_notebook_109176_1600x900.jpg");
 	padding-bottom: 300px;
 	}
+
+.footer {
+  background-image: url("http://upload.wikimedia.org/wikipedia/commons/a/a5/Austin_Evening.jpg");
+  text-align: center;
+  padding-bottom: 500px;
+}
