--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,14 +15,13 @@
   <body>
 
  <!-- Home. General information, navigation and photo -->
-  <div class="cover">
+  <div class="cover img-responsive">
   <div class="navbar">
     <ol class="breadcrumb">
   <li><a href="#">Home</a></li>
-  <li><a href="#">Bio</a></li>
+  <li><a href="#">Intro</a></li>
   <li><a href="#">Recent Projects</a></li>
   <li><a href="#">Professional Experience</a></li>
-  <li><a href="#">Human Experience</a></li>
   <span id="email"><a href="mailto:walterayalae43@gmail.com">walterayalae43@gmail.com</a></span>
     </ol>
   </div>
@@ -46,8 +45,15 @@
 </div>
 
 <!-- Section to add website's general summary -->
-<div class="summary">
 <h2>Introduction</h2>
+<div class="container">
+
+<div class="lead">
+<p>Hello and thanks for visiting, I am Walter Ayala</p>
+<p></p>
+<p>Hello World loeppfasdfasfas fasfasfasf fasdfasfasdf</p>
+<p>Hello World loeppfasdfasfas fasfasfasf fasdfasfasdf</p>
+</div>
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
@@ -58,8 +64,15 @@
       </div>
     </div>
   </div>
-</div>
-<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="https://scontent.felp1-1.fna.fbcdn.net/t31.0-8/14633189_1853371334882556_4211683782330225012_o.jpg" alt="...">
+      <div class="caption">
+        <h3>Hack Reactor</h3>
+        <p>Austin, TX</p>
+      </div>
+    </div>
+  </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
      <img src="https://scontent.felp1-1.fna.fbcdn.net/t31.0-8/14711428_1854606188092404_8668884261203829020_o.jpg" alt="hackathon pic">
@@ -70,71 +83,71 @@
     </div>
   </div>
 </div>
+
 </div>
 
+
 <!-- Most recent projects. Display top 3 with access to code repository -->
-<div class="row1">
-<h2 id="projects">Recent Projects</h2><br>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img id="qc" src="https://pbs.twimg.com/profile_images/510387922730639360/UANn5q8i.jpeg" alt="...">
-      <div class="caption">
-        <h3>QuickerCater</h3>
-        <ul>
+
+
+  <div class="projects" id="projects">
+      <div class="row">
+      <h2 >Recent Projects</h2><br>
+
+      <div class="col-md-4">
+          <h3>QuickerCater, <span>Full Stack Engineer</span></h3>
+          <ul>
         <li>Designed application structure and features based on customer/owner feedback.</li>
         <li>Tested different stacks and libraries to find the most effective way to communicate front-end with back-end to represent data pertaining to menus, cart and stores.</li>
         <li>Beta version is currently used by local businesses in Austin TX.</li>
-        </ul>
-        <p><a href="#" class="btn btn-primary" role="button">See Code</a></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img id="cr" src="http://i.huffpost.com/gen/1106197/images/o-ONLINE-DATING-facebook.jpg" alt="...">
-      <div class="caption">
-        <h3>Credz</h3>
-        <ul>
+        </ul><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h3>Credz, <span>Full Stack Engineer</span></h3>
+          <ul>
         <li>Dating application that matches users by credit score. Created during the Austin Diversity Hackathon 2016.</li>
         <li>Implemented with HTML/CSS, Bootstrap, Node.js, Express and Mongoose.</li>
         <li>Award winner and recognized for overcoming challenges during development.</li>
         <p>- "Pablo Rodriguez Award"</p>
-        </ul>
-        <p><a href="#" class="btn btn-primary" role="button">See Code</a></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="http://hiphoplives.net/wp-content/uploads/2015/09/hangman.gif" alt="...">
-      <div class="caption">
-        <h3>Hangman Game</h3>
-        <ul>
+        </ul><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+           <h3>Hangman Game, <span>Back-end Engineer</span></h3>
+          <ul>
         <li>Designed back-end development for game interaction and responsiveness.</li>
         <li>Organized back-end interface and features by implementing socket.io for real time response.</li>
         <li>Designated team roles, project requirements and deadlines during daily standups & sprint reviews.</li>
-        </ul>
-        <p><a href="#" class="btn btn-primary" role="button">See Code</a></p>
+        </ul><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-</div><br>
-<hr>
+   
+
+      <hr>
+
+
+<br>
+<br>
+
 
 <!-- Experience and professional achievements -->
+<br>
+<div class="row">
+<div class="col-md-6">
+
+
 <div class="experience">
+
 <div class="media">
 <h2>Professional Experience</h2>
+<br>
   <div class="media-left">
     <a href="#">
       <img class="media-object" src="http://churrocoaustin.com/wp-content/uploads/2014/12/ChurrCoLogoSalmon144x144.png" alt="...">
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">Churro Company Catering</h4>
+    <h4 class="media-heading">Churro Company Catering, Owner</h4>
     <ul>
     <li>Manage operations & logistics for 30 yearly events including festivals, weddings & office events.</li>
     <li>Design pricing model, menu, employee training and service agreement.</li>
@@ -151,7 +164,7 @@
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">Solarwinds</h4>
+    <h4 class="media-heading">Solarwinds, Account Manager</h4>
     <ul>
     <li>Recognized for resolving customer technical issues to attain 35% sales growth.</li>
     <li>Educated clients on Network Monitoring software through technical presentations to network<br>engineers, CTO’s, technology directors and key decision makers.</li>
@@ -168,7 +181,7 @@
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">Chase Bank</h4>
+    <h4 class="media-heading">Chase Bank, Manager on Duty</h4>
     <ul>
     <li>Employee of the month(2014); Top sales and service performance (2013). </li>
     <li>Managed a team of 15 bankers and tellers on achieving company’s sales and service goals.</li>
@@ -185,7 +198,7 @@
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">Wells Fargo</h4>
+    <h4 class="media-heading">Wells Fargo, Personal Banker</h4>
     <ul>
     <li>Promoted 3 times in first year for meeting sales goals and service expectations.</li>
     </ul>
@@ -200,19 +213,110 @@
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">The Walt Disney Company</h4>
+    <h4 class="media-heading">The Walt Disney Company, Cast Member</h4>
     <ul>
     <li>Provided bilingual customer service at the happiest place on Earth.</li>
     </ul>
   </div>
-  <br>
-  
-</div>
-</div>
-<div>
-  <h2>Human Experience</h2>
   </div>
-  <div class="footer">This footer will always be positioned at the bottom of the page, but <strong>not fixed</strong>.</div>
+  <br>
+  </div>
+</div>
+<div class="col-md-6">
+  <h2>Education</h2>
+  <br>
+
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img class="media-object" src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/c/4/6/highres_231404102.jpeg" alt="Hack-Reactor">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Hack Reactor</h4>
+    <ul>
+    <li>School of Advance Software Engineering</li>
+    <li>Computer Science</li>
+    <li>Program focused in Javascript and most recent programming frameworks</li>
+    </ul>
+  </div>
+</div>
+<br>
+
+<br>
+
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img class="media-object" src="http://research.utep.edu/Portals/531/uteplogocolor.jpg" alt="UTEP">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">University of Texas at El Paso</h4>
+    <ul>
+    <li>BBA</li>
+    <li>Double major in International Business & Management</li>
+    </ul>
+  </div>
+</div>
+<br>
+<h2>Personal Experience</h2>
+<br>
+
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img class="media-object" src="https://www.crossed-flag-pins.com/Friendship-Pins/Mexico/Flag-Pins-Mexico-Spain.jpg" alt="UTEP">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Speak and write professional Spanish</h4>
+    <ul>
+    <li>Lived in Mexico and Spain</li>
+    </ul>
+  </div>
+</div>
+<br>
+
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img class="media-object" src="https://pbs.twimg.com/profile_images/576497200399675392/XtR1y3bQ_400x400.jpeg" alt="UTEP">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Practice self defense (Krav-Maga)</h4>
+    <ul>
+    <li>Working on my next practitioner rank</li>
+    </ul>
+  </div>
+</div>
+<br>
+
+
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+      <img class="media-object" src="http://weknowyourdreams.com/images/travel/travel-01.jpg" alt="UTEP">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Enjoy planning trips and exploring new cultures</h4>
+<ul>
+ <li>Recently visited Nicaragua and Costa Rica</li>
+</ul>
+  </div>
+</div>
+
+</div>
+</div>
+<br>
+<br>
+
+
+<!-- Footer -->
+  <div class="footer">.
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
