added htmal ext

--- a/views/index.html
+++ b/views/index.html
@@ -60,7 +60,7 @@
       <img src="https://scontent.felp1-1.fna.fbcdn.net/t31.0-8/14633189_1853371334882556_4211683782330225012_o.jpg" alt="...">
       <div class="caption">
         <h3>Hack Reactor</h3>
-        <p>Austin, TX</p>
+        <p>Austin, TX-</p>
       </div>
     </div>
   </div>
