--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,8 +24,19 @@ ul {
     font-size: 18px;
     text-align: left;
 }
+
+span {
+    font-size: 18px;
+}
+
+
 /*
 
+ */
+
+
+/*
+* Pics of recent achievements format
  */
 
 .thumbnail {
@@ -36,6 +47,11 @@ ul {
 .tag {
     padding-top: 40px;
 }
+
+
+/*
+
+ */
 
 
 /*
@@ -55,9 +71,26 @@ ul {
     font-weight: bold;
 }
 
+
+/*
+
+ */
+
+
+/*
+* Cover- General information section
+ */
+
 .cover {
     background-image: url("https://wallpaperscraft.com/image/imac_apple_computer_table_cup_notebook_109176_1600x900.jpg");
     padding-bottom: 300px;
+}
+
+#title {
+    text-align: center;
+    display: inline-block;
+    color: white;
+    padding-top: 150px;
 }
 
 #imgWalt {
@@ -81,15 +114,14 @@ ul {
 }
 
 
+/*
 
-#title {
-    text-align: center;
-    display: inline-block;
-    color: white;
-    padding-top: 150px;
-}
+ */
 
 
+/*
+*Experience and professional achievements section
+ */
 
 .experience {
     height: 100%;
@@ -104,11 +136,20 @@ ul {
     font-size: 16px;
 }
 
-#qc {
-    height: 285px;
-    width: 50%;
-    border-radius: 50%;
+.media-object {
+    width: 100px;
+    padding-left: 30px;
 }
+
+
+/*
+
+ */
+
+
+/*
+* Recent Projects section
+ */
 
 .projects {
     background-color: #056198;
@@ -118,18 +159,15 @@ ul {
     padding-left: 30px;
 }
 
-#cr {
-    height: 268px;
-    width: 75%;
-    border-radius: 50%;
-}
 
-.media-object {
-    width: 100px;
-    padding-left: 30px;
-}
+/*
+
+ */
 
 
+/*
+* Footer section
+ */
 
 .footer {
     background-image: url("http://upload.wikimedia.org/wikipedia/commons/a/a5/Austin_Evening.jpg");
@@ -137,6 +175,7 @@ ul {
     padding-bottom: 500px;
 }
 
-span {
-    font-size: 18px;
-}
+
+/*
+
+ */
